--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>about me</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
@@ -10,7 +10,7 @@
         <h1 id="welcome" ></h1>
     </header>
     <main>
-            <img src="/img/ddd.jpg" alt="">
+            <img src="img/ddd.jpg" alt="">
 
     <div class="container">
 
@@ -32,6 +32,6 @@
     <footer>
 
     </footer>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
