--- a/index.html
+++ b/index.html
@@ -10,22 +10,52 @@
         <h1 id="welcome" ></h1>
     </header>
     <main>
-            <img src="img/ddd.jpg" alt="">
+
 
     <div class="container">
 
-        <div class="qustions" id="qustions">
-            <h4>Am I 25 years old ?</h4>
-            <h5 id="answer1"></h5>
-            <h4>graduated from Albalqaa University ?</h4>
-            <h5 id="answer2"></h5>
-            <h4>my fav football team real madried ?</h4>
-            <h5 id="answer3" ></h5>
-            <h4>watch basketball alot ?</h4>
-            <h5 id="answer4" ></h5>
-            <h4>i dont like watching movies ?</h4>
-            <h5 id="answer5" ></h5>
+        <div class="aboutMe">
+            <h4>
+                I'm graduated from balqa applied university in major of power engineer, But my passion was always been in computers and the Internet so I started studying programming by myself and I joined a coding school in jordan called ASAC
+            </h4>
         </div>
+
+        <div class="qustions" id="qustions">
+            <h1>Your Result</h1>
+            <br>
+            <h5>Am I 25 years old ?</h5>
+            <h6 id="answer1">sssssss</h6>
+            <h5>My fav singer is lara fabian?</h5>
+            <h6 id="answer2">sssssss</h6>
+            <h5>my fav football team barcelona?</h5>
+            <h6 id="answer3" >sssssss</h6>
+            <h5>watch basketball alot?</h5>
+            <h6 id="answer4" >sssssss</h6>
+            <h5>i dont like watching movies?</h5>
+            <h6 id="answer5" >sssssss</h6>
+        </div>
+
+        <div class="clr"></div>
+
+        <div class="movies">
+            <h3>my fav movies</h3>
+            <br>
+            <ol>
+                <li><a href="https://www.imdb.com/title/tt0268978/?ref_=tt_sims_tt">A Beautiful Mind</a></li>
+                <li><a href="https://www.imdb.com/title/tt0060827/?ref_=nv_sr_srsg_2">Persona </a></li>
+                <li><a href="https://www.imdb.com/title/tt0050976/?ref_=nm_knf_t3">the seventh seal</a></li>
+                <li><a href="https://www.imdb.com/title/tt1683526/?ref_=nv_sr_srsg_0">Detachment </a></li>
+                <li><a href="https://www.imdb.com/title/tt0253474/?ref_=tt_sims_tt">The Pianist</a></li>
+                <li><a href="https://www.imdb.com/title/tt0118799/?ref_=tt_sims_tt">La vita è bella</a></li>
+                <li><a href="https://www.imdb.com/title/tt8267604/?ref_=nm_knf_t1">Capharnaüm </a></li>
+                <li><a href="https://www.imdb.com/title/tt0144201/?ref_=nv_sr_srsg_0">La fille sur le pont</a></li>
+                <li><a href="https://www.imdb.com/title/tt7286456/?ref_=tt_sims_tt">Joker</a></li>
+                <li><a href="https://www.imdb.com/title/tt1798709/?ref_=nm_knf_t3">Her </a></li>
+
+            </ol>
+        </div>
+        
+
 
     </div>
     </main>
