finshing about me website

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>about me</title>
+    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -15,6 +16,8 @@
     <div class="container">
 
         <div class="aboutMe">
+            <h2>About Me</h2>
+            <br>
             <h4>
                 I'm graduated from balqa applied university in major of power engineer, But my passion was always been in computers and the Internet so I started studying programming by myself and I joined a coding school in jordan called ASAC
             </h4>
@@ -24,15 +27,15 @@
             <h1>Your Result</h1>
             <br>
             <h5>Am I 25 years old ?</h5>
-            <h6 id="answer1">sssssss</h6>
+            <h6 id="answer1">>>>>></h6>
             <h5>My fav singer is lara fabian?</h5>
-            <h6 id="answer2">sssssss</h6>
+            <h6 id="answer2">>>>></h6>
             <h5>my fav football team barcelona?</h5>
-            <h6 id="answer3" >sssssss</h6>
+            <h6 id="answer3" >>>>>></h6>
             <h5>watch basketball alot?</h5>
-            <h6 id="answer4" >sssssss</h6>
+            <h6 id="answer4" >>>>>></h6>
             <h5>i dont like watching movies?</h5>
-            <h6 id="answer5" >sssssss</h6>
+            <h6 id="answer5" >>>>>></h6>
         </div>
 
         <div class="clr"></div>
